deploy/microshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sensortrain
  namespace: sensortrain
spec:
  host: sensortrain.test
  to:
    kind: Service
    name: sensortrain-web
  port:
    targetPort: http
